@@ -69,6 +69,7 @@ class RevelationApplet(object):
 		self.config.monitor("autolock_timeout",	lambda k,v,d: self.locktimer.start(v * 60))
 
 		self.datafile.connect("changed", self.__cb_file_changed)
+		self.datafile.connect("content-changed", self.__cb_file_content_changed)
 		self.locktimer.connect("ring", self.__cb_file_autolock)
 
 
@@ -231,6 +232,16 @@ class RevelationApplet(object):
 		"Callback for autolocking the file"
 
 		if self.config.get("autolock") == True:
+			self.file_close()
+
+
+	def __cb_file_content_changed(self, widget, data = None):
+		"Callback for changed file content"
+
+		try:
+			self.file_open(self.datafile.get_file(), self.datafile.get_password())
+
+		except datahandler.PasswordError:
 			self.file_close()
 
 
@@ -429,7 +440,11 @@ class RevelationApplet(object):
 			dialog.Error(None, "Unable to detect filetype", "The file type of the file '%s' could not be automatically detected. Try specifying the file type manually." % file).run()
 
 		except datahandler.PasswordError:
-			dialog.Error(None, "Incorrect password", "You entered an incorrect password for the file '%s', please try again." % file).run()
+			if password == None:
+				dialog.Error(None, "Incorrect password", "You entered an incorrect password for the file '%s', please try again." % file).run()
+
+			else:
+				raise
 
 		except IOError:
 			dialog.Error(None, "Unable to open file", "The file '%s' could not be opened. Make sure that the file exists, and that you have permissions to open it." % file).run()
@@ -439,7 +454,11 @@ class RevelationApplet(object):
 		"Reloads the current data file"
 
 		if self.datafile.get_file() != None:
-			self.file_open(self.datafile.get_file(), self.datafile.get_password())
+			try:
+				self.file_open(self.datafile.get_file(), self.datafile.get_password())
+
+			except datahandler.PasswordError:
+				self.file_open(self.datafile.get_file(), None)
 
 
 	def generate_entrymenu(self, entrystore, parent = None):
